# partial-mixed-markdown

./: .gitignore  Cargo.toml  readme.md
benches/: all.rs
src/: build.rs  document.rs  grammar.pest  lib.rs  main.rs
tests/: escape.html  escape.md  headers.html  headers.md  large.html  large.md  mixed.html  mixed.md
