[package]
name = "partial-mixed-markdown"
version = "0.1.0"
authors = ["Micha <61242418+modestmicha@users.noreply.github.com>"]
edition = "2018"
build = "src/build.rs"

[dependencies]
anyhow = "1.0.26"
fehler = "1.0.0-alpha.2"
htmlescape = "0.3.1"
kuchiki = "0.8.0"
lazy_static = "1.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
regex = "1.3.4"
html5ever = "0.25.1"
markup5ever = "0.10.0"

[build-dependencies]
anyhow = "1.0.26"
fehler = "1.0.0-alpha.2"
proc-macro2 = "1.0.9"
quote = "1.0.3"

[dev-dependencies]
dialoguer = "0.5.0"
difference = "2.0.0"
criterion = "0.3.1"

[[bench]]
name = "all"
harness = false

[[bin]]
name = "partial-mixed-markdown"
path = "src/main.rs"

[lib]
name = "partial_mixed_markdown"
path = "src/lib.rs"
